fixed spacing on signup page and added title

--- a/frontend/signup.css
+++ b/frontend/signup.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-align: center;
 }
 
 .panels-container {
@@ -13,19 +14,19 @@ body {
 }
 
 .panel {
-    width: 30%; 
+    width: 25%; 
     margin: 10px; 
     text-align: center; 
-    font-size: 2em;
+    font-size: 1.5em;
     font-family: 'Trebuchet MS';
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); 
     padding: 20px;
 }
 
 .panel img {
-    height: 600px; 
+    height: 300px; 
     width: auto; 
-    object-fit: cover; 
+    object-fit: scale-down; 
 }
 
 .panel button {
